# DCA-2

./: CMakeLists.txt
applications/analysis/: CMakeLists.txt
applications/dca/: CMakeLists.txt  main_dca.cpp
build-aux/: cades_load_modules.sh  frontier_load_modules.sh  rusty.cmake  rusty_load_modules.sh
cmake/: dca_config.cmake  dca_external_libs.cmake
include/dca/function/: function.hpp
include/dca/function/domains/: dmn_variadic.hpp
include/dca/io/hdf5/: hdf5_writer.hpp
include/dca/linalg/: matrix_view.hpp  matrixop.hpp
include/dca/linalg/util/: magma_queue.hpp
include/dca/parallel/mpi_concurrency/: mpi_collective_sum.hpp
include/dca/phys/dca_algorithms/: compute_free_greens_function.hpp  compute_greens_function.hpp
include/dca/phys/dca_data/: dca_data.hpp
include/dca/phys/dca_loop/: dca_loop.hpp
include/dca/phys/parameters/: mci_parameters.hpp  model_parameters.hpp  model_parameters_twoband_altermagnet_SU2.inc  parameters.hpp  physics_parameters.hpp
misc/wiki/: Parameters.md
src/io/hdf5/: CMakeLists.txt
src/phys/dca_step/cluster_solver/: CMakeLists.txt
test/integration/cluster_solver/ctint/: ctint_double_update_comparison_test.cpp
test/integration/exact_diagonalization_advanced/: CMakeLists.txt
test/integration/statistical_tests/real_materials/: CMakeLists.txt
test/performance/phys/accumulation/: tp_accumulation_performance_test.cpp
test/unit/function/: function_library_test.cpp
test/unit/linalg/: CMakeLists.txt  matrix_gpu_test.cpp  matrixop_complex_cpu_test.cpp  matrixop_real_gpu_test.cpp
tools/cooldown/: cooldown.py
(+64 files in other folders)
